<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ImageDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/selected_imageview"
            android:layout_gravity="center_horizontal"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/likes_LBL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/likes"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/number_likes_LBL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_zero"
                android:fontFamily="casual"
                android:textColor="@color/black" />

            <Space
                android:layout_width="0dp"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/downloads_LBL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/downloads"
                android:textColor="@color/black"
                android:fontFamily="casual"/>

            <TextView
                android:id="@+id/number_downloads_LBL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_zero"
                android:textColor="@color/black"
                android:fontFamily="casual"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/views_LBL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_views"
                android:textColor="@color/black"
                android:fontFamily="casual"/>

            <TextView
                android:id="@+id/number_of_views_LBL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_zero"
                android:textColor="@color/black"
                android:fontFamily="casual"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/tags_LBL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tags"
                android:textColor="@color/black"
                android:fontFamily="casual"/>

            <TextView
                android:id="@+id/the_tags_LBL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_tags_yet"
                android:textColor="@color/black"
                android:fontFamily="casual"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/BTN_back"
            android:text="@string/back"
            android:textAllCaps="false"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_shape_gray"
            android:fontFamily="casual"/>

    </LinearLayout>

</FrameLayout>