<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.GetMobileNumberFragment"
    android:background="@drawable/gradient_cool_sky">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/app_name"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="64dp"
            android:textStyle="bold"
            android:fontFamily="casual"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:padding="20dp"
        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:shadowColor="@color/colorAccent"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/sign_up"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textColor="#000"
            android:textSize="28sp"
            android:textStyle="bold"
            android:fontFamily="casual"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:textColor="#000"
            android:shadowColor="@color/colorPrimary"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/type_in_your_phone_number"
            android:fontFamily="casual"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_EDT_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:digits="0123456789+"
            android:hint="@string/phone_number_here"
            android:inputType="phone"
            android:maxLength="10"
            android:textColorHint="@color/white"
            android:textColorHighlight="@color/white"
            android:textColor="@color/white"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/login_BTN_enter"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/enter"
                android:textAllCaps="false"
                android:background="@drawable/button_shape_gray"
                android:fontFamily="casual"/>


            <TextView
                android:id="@+id/login_LBL_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/code_will_be_sent_to_your_phone"
                android:gravity="center_horizontal"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:fontFamily="casual"/>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>