<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_cool_sky"
    tools:context=".Fragments.VerifyPhoneFragment">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:text="@string/app_name"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="64dp"
            android:textStyle="bold"
            android:fontFamily="casual"/>
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:layout_below="@id/relativeLayout"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:text="@string/code_will_be_auto_loaded"
            android:fontFamily="casual"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/verify_PSB_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/verify_EDT_pass"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:digits="0123456789"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:hint="@string/enter_code_here"
            android:inputType="phone"
            android:maxLength="10" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/verify_BTN_login"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_shape_gray"
                android:text="@string/login"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:fontFamily="casual"/>


            <TextView
                android:id="@+id/verify_LBL_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>